--- a/app/views/noticeofchange/solicitor/addenterdetails.html
+++ b/app/views/noticeofchange/solicitor/addenterdetails.html
@@ -41,7 +41,7 @@ Case details
                                 <div class="govuk-error-summary__body">
                                     <ul class="govuk-list govuk-error-summary__list">
                                         <li>
-                                            <a href="#casenumber">Enter a valid online case reference</a>
+                                            <a href="#casenumber">Enter an online case reference number that exactly matches the case details</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -57,7 +57,7 @@ Case details
                                 <div class="govuk-error-summary__body">
                                     <ul class="govuk-list govuk-error-summary__list">
                                         <li>
-                                            <a href="#casenumber">Enter an online case reference</a>
+                                            <a href="#casenumber">Enter an online case reference number that exactly matches the case details</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -102,7 +102,7 @@ Case details
 
                                     {% if  data.errorcasenumber == 'true'  or  data.errorcasenumbernomatch == 'true'  %}
                                         <span id="national-insurance-number-error" class="govuk-error-message">
-                                            <span class="govuk-visually-hidden">Error:</span> You must enter an online case reference number that exactly matches the case details
+                                            <span class="govuk-visually-hidden">Error:</span> Enter an online case reference number that exactly matches the case details
                                         </span>
                                         <input class="govuk-input govuk-input--width-10 govuk-input--error" id="casenumber" name="casenumber" type="text" spellcheck="false" value="{{data.casenumber}}">
                                     {% else %}
