update from numbers to bullets

--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -169,10 +169,10 @@ Case details
                             </legend>-->
 
                             <p>You should tick to ‘sign’ when:</p>
-                            <ol  class="govuk-body">
+                            <ul  class="govuk-body">
                                 <li>you’re satisfied that all the information is accurate and matches what is written on the case</li>
                                 <li>you have served notice of this change on every party to the claim (including the former legal representative)</li>
-                            </ol>
+                            </ul>
 
 
                             {% if data.errorsot == 'true'%}
