very rough frist draft of search entry page

--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -13,26 +13,32 @@
             Search cases prototype
         </h1>
 
-        <p class="govuk-body">Users:</p>
-        <ul  class="govuk-body">
-            <li>Judge</li>
-            <li>Legal Advisors</li>
-            <li>Caseworkers</li>
-            <li>QMCAs</li>
-        </ul>
+
+        <div style="display: flex; margin-top: 80px;">
+
+            <div style="width: 350px;">
+                <h2 class="govuk-heading-m">Judiciary</h2>
+                <p><a target="_blank" href="searchcases/pages/caselist?usertype=judiciary&">Caselist</a></p>
+                <p><a target="_blank" href="searchcases/pages/search?usertype=judiciary&">Search entry</a></p>
+                <p><a target="_blank" href="searchcases/pages/searchresults">Search results</a></p>
+            </div>
+
+            <div>
+                <h2 class="govuk-heading-m">Legal Advisors, Caseworkers and QMCAs</h2>
+                <p><a target="_blank" href="searchcases/pages/caselist?usertype=staff&">Caselist</a></p>
+                <p><a target="_blank" href="searchcases/pages/search?usertype=staff&">Search entry</a></p>
+                <p><a target="_blank" href="searchcases/pages/searchresults">Search results</a></p>
+            </div>
+
+        </div>
 
 
-        <h2 class="govuk-heading-l">Pages</h2>
 
-
-        <p><a target="_blank" href="searchcases/pages/caselist">Caselist</a></p>
-
-        <p><a target="_blank" href="searchcases/pages/search">Search entry</a></p>
-
-        <p><a target="_blank" href="searchcases/pages/searchresults">Search results</a></p>
 
         <br>
         <br>
+
+
 
 
 
