--- a/app/views/searchcases/pages/caselist.html
+++ b/app/views/searchcases/pages/caselist.html
@@ -1,4 +1,10 @@
-{% extends "../layoutdemo.html" %}
+{% if  data.usertype == 'judiciary'   %}
+    {% extends "../layoutjudicial.html" %}
+{% else %}
+    {% extends "../layoutstaff.html" %}
+{% endif %}
+
+
 
 {% block pageTitle %}
 Case details
