--- a/app/views/searchcases/pages/results.html
+++ b/app/views/searchcases/pages/results.html
@@ -30,7 +30,8 @@ Case details
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;">Status</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Location</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Judge</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 120px;">Next hearing</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 116px;">Next hearing</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 60px;">Flags</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 84px;"></th>
         </tr>
         </thead>
@@ -42,7 +43,8 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">South Eastern</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Smith</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">20 June 2021</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">View case</a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="#">View</a></td>
             </tr>
         </tbody>
     </table>
