--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -18,16 +18,16 @@
 
             <div style="width: 350px;">
                 <h2 class="govuk-heading-m">Judiciary</h2>
-                <p><a target="_blank" href="searchcases/pages/caselist?usertype=judiciary&">Caselist</a></p>
-                <p><a target="_blank" href="searchcases/pages/search?usertype=judiciary&">Search entry</a></p>
-                <p><a target="_blank" href="searchcases/pages/searchresults">Search results</a></p>
+                <p><a target="_blank" href="/pages/caselist?usertype=judiciary&">Caselist</a></p>
+                <p><a target="_blank" href="/pages/search?usertype=judiciary&">Search entry</a></p>
+                <p><a target="_blank" href="/pages/searchresults">Search results</a></p>
             </div>
 
             <div>
                 <h2 class="govuk-heading-m">Legal Advisors, Caseworkers and QMCAs</h2>
-                <p><a target="_blank" href="searchcases/pages/caselist?usertype=staff&">Caselist</a></p>
-                <p><a target="_blank" href="searchcases/pages/search?usertype=staff&">Search entry</a></p>
-                <p><a target="_blank" href="searchcases/pages/searchresults">Search results</a></p>
+                <p><a target="_blank" href="/pages/caselist?usertype=staff&">Caselist</a></p>
+                <p><a target="_blank" href="/pages/search?usertype=staff&">Search entry</a></p>
+                <p><a target="_blank" href="/pages/searchresults">Search results</a></p>
             </div>
 
         </div>
