updates to permissions content

--- a/app/views/manageorg/solicitor/editpermissions.html
+++ b/app/views/manageorg/solicitor/editpermissions.html
@@ -23,7 +23,7 @@ Divorce
 
             <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Permissions</h3>
             <div id="passport-issued-hint" class="govuk-hint">
-                Choose what the user will be able to do.  You can change this later.
+                Choose at least one action the user can do.  You can change this later.
             </div>
 
             <div class="govuk-form-group">
@@ -32,7 +32,7 @@ Divorce
                         <div class="govuk-checkboxes__item">
                             <input class="govuk-checkboxes__input" id="mc" name="mc" type="checkbox" checked value="carcasses">
                             <label class="govuk-label govuk-checkboxes__label" for="mc">
-                                Manage Cases
+                                Manage cases
                             </label>
                             <div id="passport-issued-hint" class="govuk-hint" style="margin-left:15px;">
                                 View, create and progress cases.
@@ -41,7 +41,7 @@ Divorce
                         <div class="govuk-checkboxes__item">
                             <input class="govuk-checkboxes__input" id="mu" name="mu" type="checkbox" checked  value="mines">
                             <label class="govuk-label govuk-checkboxes__label" for="mu">
-                                Manage Users
+                                Manage users
                             </label>
                             <div id="passport-issued-hint" class="govuk-hint" style="margin-left:15px;">
                                 Invite users.
@@ -50,19 +50,19 @@ Divorce
                         <div class="govuk-checkboxes__item">
                             <input class="govuk-checkboxes__input" id="mo" name="mo" type="checkbox" checked  value="farm">
                             <label class="govuk-label govuk-checkboxes__label" for="mo">
-                                Manage Organisation
+                                Manage organisation
                             </label>
                             <div id="passport-issued-hint" class="govuk-hint" style="margin-left:15px;">
-                                View organisation name and addresses.
+                                View the organisation name and address.
                             </div>
                         </div>
                         <div class="govuk-checkboxes__item">
                             <input class="govuk-checkboxes__input" id="caa" name="caa" type="checkbox" value="farm">
                             <label class="govuk-label govuk-checkboxes__label" for="caa">
-                                Case Access Administrator
+                                Case access administrator
                             </label>
                             <div id="passport-issued-hint" class="govuk-hint" style="margin-left:15px;">
-                                Admin case access
+                                Manage case caccess for all users within the organisation
                             </div>
                         </div>
                     </div>
