--- a/app/views/manageorg/solicitor/userdetails.html
+++ b/app/views/manageorg/solicitor/userdetails.html
@@ -16,7 +16,7 @@ Divorce
 
 
             <h1 class="govuk-fieldset__legend--l govuk-!-margin-top-0">
-                Users
+                User
             </h1>
 
             <div style="width:800px;" >
