--- a/app/views/manageorg/solicitor/editpermissions.html
+++ b/app/views/manageorg/solicitor/editpermissions.html
@@ -62,7 +62,7 @@ Divorce
                                 Case access administrator
                             </label>
                             <div id="passport-issued-hint" class="govuk-hint" style="margin-left:15px;">
-                                Manage case caccess for all users within the organisation
+                                Manage case access for all users within the organisation.
                             </div>
                         </div>
                     </div>
