--- a/app/views/searchcases/pages/search.html
+++ b/app/views/searchcases/pages/search.html
@@ -82,8 +82,11 @@ Case details
         <div id='family' style="display: none;">
             <div class="govuk-form-group">
                 <label class="govuk-label" for="email">
-                    Court name/ hearing venue
+                    Location
                 </label>
+                <div id="email-hint" class="govuk-hint">
+                    For example, a Region, Cluster, Court area, Court, Hearing centre
+                </div>
                 <input class="govuk-input govuk-input--width-10" id="email" name="email" type="text" >
             </div>
             <!--   DOB  -->
@@ -123,8 +126,11 @@ Case details
         <div id="iac" style="display: none;">
             <div class="govuk-form-group">
                 <label class="govuk-label" for="email">
-                    Court name/ hearing venue
+                    Location
                 </label>
+                <div id="email-hint" class="govuk-hint">
+                    For example, a Region, Cluster, Court area, Court, Hearing centre
+                </div>
                 <input class="govuk-input govuk-input--width-10" id="email" name="email" type="text" >
             </div>
 
@@ -159,8 +165,11 @@ Case details
             </fieldset>
             <div class="govuk-form-group">
                 <label class="govuk-label" for="email">
-                    Court name/ hearing venue
+                    Location
                 </label>
+                <div id="email-hint" class="govuk-hint">
+                    For example, a Region, Cluster, Court area, Court, Hearing centre
+                </div>
                 <input class="govuk-input govuk-input--width-10" id="email" name="email" type="text" >
             </div>
             <div class="govuk-form-group">
@@ -176,8 +185,11 @@ Case details
         <div id="cmc" style="display: none;">
             <div class="govuk-form-group">
                 <label class="govuk-label" for="email">
-                    Court name/ hearing venue
+                    Location
                 </label>
+                <div id="email-hint" class="govuk-hint">
+                    For example, a Region, Cluster, Court area, Court, Hearing centre
+                </div>
                 <input class="govuk-input govuk-input--width-10" id="email" name="email" type="text" >
             </div>
         </div>
