--- a/app/views/manageorg/solicitor/users.html
+++ b/app/views/manageorg/solicitor/users.html
@@ -12,10 +12,21 @@ Divorce
 
         <div class="govuk-form-group">
 
+            <div style="width:1220px; display: flex; justify-content: space-between">
+                <div >
+                    <h1 class="govuk-fieldset__legend--l  govuk-!-margin-bottom-7">
+                        Users
+                    </h1>
+                </div>
+                <div >
+                    <a href="inviteuser">
+                        <button class="govuk-button govuk-!-margin-top-7" data-module="govuk-button" >
+                            Invite user
+                        </button>
+                    </a>
 
-            <h1 class="govuk-fieldset__legend--l  govuk-!-margin-bottom-7">
-                Users
-            </h1>
+                </div>
+            </div>
 
 
             <table class="govuk-table">
