--- a/app/views/manageorg/solicitor/userdetails.html
+++ b/app/views/manageorg/solicitor/userdetails.html
@@ -37,7 +37,7 @@ Divorce
                         </tr>
                         <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__cell">Permissions</th>
-                            <td class="govuk-table__cell">Manage Organisation<br>Manage Users<br>Manage Cases<br>{% if data.showcaapermish == 'true' %}Case Access Administrator{% endif %}</td>
+                            <td class="govuk-table__cell">Manage organisation<br>Manage users<br>Manage cases<br>{% if data.showcaapermish == 'true' %}Case access administrator{% endif %}</td>
                             <td class="govuk-table__cell" style="width:40px;">
                                 <p><a href="editpermissions" style="text-decoration: underline;">Change</a></p>
                             </td>
